--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,23 +8,23 @@
 </head>
 <body>
 <div class="container-fluid">
-    <div class="col-8 mx-auto">
+    <div class="col-6 mx-auto">
         <div class="row my-5">
-            <div class="col-4 mx-auto">
+            <div class="col-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Prihlásenie pre žiadateľa</h5>
+                        <h3 class="card-title">Prihlásenie pre žiadateľa</h3>
                         <p class="card-text">Prihlásenie žiadateľa o vstup.</p>
-                        <a href="/ziadatel/login" class="btn btn-primary">Prihlásiť sa ako žiadateľ</a>
+                        <a href="/ziadatel/login" class="btn btn-primary col-12">Prihlásiť sa ako žiadateľ</a>
                     </div>
                 </div>
             </div>
-            <div class="col-4 mx-auto">
+            <div class="col-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Prihlásenie pre správcu</h5>
+                        <h3 class="card-title">Prihlásenie pre správcu</h3>
                         <p class="card-text">Prihlásenie správcu pre schvaľovanie žiadostí.</p>
-                        <a href="/spravca/login" class="btn btn-primary">Prihlásiť sa ako správca</a>
+                        <a href="/spravca/login" class="btn btn-primary col-12">Prihlásiť sa ako správca</a>
                     </div>
                 </div>
             </div>
