--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 <div class="container-fluid">
-    <div class="col-4 mx-auto">
+    <div class="col-3 mx-auto my-5">
         <div class="card">
             <div class="card-body">
-                <h2 class="card-title">Prihlásenie</h2>
+                <h2 class="card-title text-center">Prihlásenie</h2>
                 <form action="" method="post" th:object="${loginForm}">
                     <label for="login">Prihlasovacie meno</label>
-                    <input th:field="*{login}" class="form-control form-control-sm" type="text" id="login"/>
-                    <label for="password">Prihlasovacie heslo</label>
-                    <input th:field="*{password}" class="form-control form-control-sm" type="password" id="password"/>
-                    <button class="btn btn-primary" type="submit">Prihlásiť sa</button>
+                    <input th:field="*{login}" class="form-control form-control-sm mb-2 text-centerň" type="text" id="login"/>
+                    <label for="password">Heslo</label>
+                    <input th:field="*{password}" class="form-control form-control-sm mb-3" type="password" id="password"/>
+                    <button class="btn btn-primary col-12" type="submit">Prihlásiť sa</button>
                 </form>
             </div>
         </div>
