--- a/src/main/resources/templates/spravca/profil.html
+++ b/src/main/resources/templates/spravca/profil.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Zoznam žiadostí - Vstup do Historického centra hlavného mesta</title>
+    <title>Stránka správcu - Vstup do Historického centra hlavného mesta</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
 <body>
-<div th:replace="layout/header-ziadatel :: header"></div>
+<div th:replace="layout/header-spravca :: header"></div>
 
 <div class="container-fluid">
     <div class="col-5 card my-5 mx-auto" th:if="${requests == null || #lists.isEmpty(requests)}">
         <div class="card-body">
-            <h2 class="card-title mb-3">Ešte nebola podaná žiadosť o vstup</h2>
-            <p>Keď podáte žiadosť, tu sa zobrazia všetky podané a spracované žiadosti.</p>
+            <h2 class="card-title mb-3">Nie sú žiadne žiadosti na skontrolovanie</h2>
+            <p>Akonáhle pribudne žiadosť, zjaví sa tu.</p>
         </div>
     </div>
     <div class="col-6 mx-auto">
