--- a/src/main/resources/templates/ziadatel/profil.html
+++ b/src/main/resources/templates/ziadatel/profil.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Profil žiadateľa - Vstup do Historického centra hlavného mesta</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
 <body>
@@ -15,15 +16,17 @@
             <p class="card-text">Všeky predvyplnené údaje o žiadateľovi a údaje, ktoré je ešte možné doplniť</p>
         </div>
         <ul class="list-group list-group-flush" th:object="${user}">
-            <li class="list-group-item">Typ osoby: <span th:text="#{*{typeOfPerson}}"></span></li>
-            <li class="list-group-item">Meno: <span th:text="*{name}"></span> </li>
-            <li class="list-group-item"><span th:text="#{*{typeOfPerson} + '.identifikator'}"></span>: <span th:text="*{identifier}"></span></li>
-            <li class="list-group-item">Telefónne číslo: <span th:text="*{phone}"></span></li>
-            <li class="list-group-item">Email: <span th:text="*{email}"></span></li>
-            <li class="list-group-item"><span th:text="#{*{typeOfPerson} + '.adresa'}"></span>: <span th:text="*{address}"></span></li>
-            <li class="list-group-item">Evidenčné číslo vozidla: <span th:text="*{ecv}"></span></li>
-            <li class="list-group-item">Hmotnosť vozidla podľa techničáku: <span th:text="*{weightOfCar}"></span></li>
-            <li class="list-group-item">Továrenská značka: <span th:text="*{factoryBrand}"></span></li>
+            <li class="list-group-item">Typ osoby: <span style="font-weight: bold;" th:text="#{*{typeOfPerson}}"></span></li>
+            <li class="list-group-item">Meno: <span style="font-weight: bold;" th:text="*{name}"></span></li>
+            <li class="list-group-item"><span th:text="#{*{typeOfPerson} + '.identifikator'}"></span>: <span style="font-weight: bold;"
+                    th:text="*{identifier}"></span></li>
+            <li class="list-group-item">Telefónne číslo: <span style="font-weight: bold;" th:text="*{phone}"></span></li>
+            <li class="list-group-item">Email: <span style="font-weight: bold;" th:text="*{email}"></span></li>
+            <li class="list-group-item"><span th:text="#{*{typeOfPerson} + '.adresa'}"></span>: <span style="font-weight: bold;"
+                    th:text="*{address}"></span></li>
+            <li class="list-group-item">Evidenčné číslo vozidla: <span style="font-weight: bold;" th:text="*{ecv}"></span></li>
+            <li class="list-group-item">Hmotnosť vozidla podľa techničáku: <span style="font-weight: bold;" th:text="*{weightOfCar}"></span></li>
+            <li class="list-group-item">Továrenská značka: <span style="font-weight: bold;" th:text="*{factoryBrand}"></span></li>
         </ul>
     </div>
 </div>
